@@ -164,7 +164,6 @@ log_options_t log_opts = LOG_OPTS_INITIALIZER;
 log_options_t sched_log_opts = SCHEDLOG_OPTS_INITIALIZER;
 
 /* Global variables */
-bool    alloc_booting_nodes = false;
 bool    preempt_send_user_signal = false;
 int	accounting_enforce = 0;
 int	association_based_accounting = 0;
