@@ -212,7 +212,6 @@ enum {
 	TRES_ARRAY_TOTAL_CNT
 };
 
-extern bool  alloc_booting_nodes;
 extern bool  preempt_send_user_signal;
 extern time_t	last_proc_req_start;
 extern diag_stats_t slurmctld_diag_stats;
