@@ -126,6 +126,9 @@ HIGHLIGHTS
       SuspendTimeout.
     - Powering down nodes put in "Powering Down / %" state until after
       SuspendTimeout.
+ -- Allocate nodes that are booting. Previously, nodes that were being booted
+    were off limits for allocation. This caused more nodes to be booted than
+    needed in a cloud environment.
 
 SPECIAL NOTES FOR CRAY SYSTEMS
 ==============================
@@ -174,8 +177,6 @@ CONFIGURATION FILE CHANGES (see man appropriate man page for details)
  -- Add PriorityWeightAssoc to control association priority factor of a job.
  -- Add idle_on_node_suspend SlurmctldParameter to make nodes idle regardless
     of state when suspended.
- -- Add alloc_booting_nodes SchedulerParameter to allow jobs to be placed on
-    booting nodes.
  -- Add preempt_send_user_signal SlurmctldParameter option to send user
     signal (e.g. --signal=<SIG_NUM>) at preemption if it hasn't already been
     sent.
